Issue #5 Fitler results based on user input
